RT_Subnet_Assoc.tf
resource "aws_route_table_association" "Project_RT_SubNet" {
  subnet_id      = aws_subnet.Project_Subnet.id
  route_table_id = aws_route_table.Project_RT.id
}
